# flatpak-xdg-utils

./: .gitignore  .travis.yml  Makefile.am  NEWS  README.md  configure.ac  meson.build  meson_options.txt
.github/workflows/: check.yml
po/: Makevars
src/: Makefile.am  backport-autoptr.h  flatpak-spawn.c  meson.build  xdg-email.c  xdg-open.c
tests/: ci-build.sh  ci-install.sh  common.c  common.h  meson.build  test-email.c  test-open.c  test-spawn.c
