bin_PROGRAMS = xdg-open xdg-email flatpak-spawn

xdg_open_SOURCES = xdg-open.c

xdg_open_CFLAGS = $(FLATPAK_XDG_UTILS_CFLAGS)
xdg_open_LDADD  = $(FLATPAK_XDG_UTILS_LIBS)


xdg_email_SOURCES = xdg-email.c

xdg_email_CFLAGS = $(FLATPAK_XDG_UTILS_CFLAGS)
xdg_email_LDADD  = $(FLATPAK_XDG_UTILS_LIBS)

flatpak_spawn_SOURCES = flatpak-spawn.c

flatpak_spawn_CFLAGS = $(FLATPAK_XDG_UTILS_CFLAGS)
flatpak_spawn_LDADD  = $(FLATPAK_XDG_UTILS_LIBS)
